executable(
    meson.project_name(),
    'Application.vala',
    'MainWindow.vala',
    'Services/Accuracy.vala',
    'Services/DBManager.vala',
    'Services/Lessons.vala',
    'Services/Timer.vala',
    'Widgets/CustomBox.vala',
    'Widgets/CustomButton.vala',
    'Widgets/Header.vala',
    'Widgets/Info.vala',
    'Widgets/Keyboard.vala',
    'Widgets/Lessons.vala',
    'Widgets/Lesson.vala',
    'Widgets/Result.vala',
    'Widgets/SimpleKey.vala',
    'Widgets/Welcome.vala',
    asresources,
    dependencies: [
        dep_gtk3,
        dep_granite,
        dep_json,
        dep_sqlite
    ],
    install : true
)
