executable(
    meson.project_name(),
    'Application.vala',
    'MainWindow.vala',
    'Services/Accuracy.vala',
    'Services/DBManager.vala',
    'Services/Lessons.vala',
    'Services/Timer.vala',
    'Views/Result.vala',
    'Views/Statistic.vala',
    'Views/Task.vala',
    'Widgets/CustomMButton.vala',
    'Widgets/Graphic.vala',
    'Widgets/Header.vala',
    'Widgets/Info.vala',
    'Widgets/Keyboard.vala',
    'Widgets/LayoutRow.vala',
    'Widgets/Preferences.vala',
    'Widgets/SimpleKey.vala',
    'Widgets/Tasks.vala',
    asresources,
    dependencies: [
        dep_gtk3,
        dep_granite,
        dep_json,
        dep_sqlite,
        meson.get_compiler('c').find_library('m', required : false)
    ],
    install : true
)
